Use Tab-base navigation. Add DeliverySummaryVC and hook up.

--- a/FruitexDriver/Interface/iPhoneStoryboard.storyboard
+++ b/FruitexDriver/Interface/iPhoneStoryboard.storyboard
@@ -1,49 +1,99 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A598" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="P5n-vA-jHC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A598" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Bil-au-M2R">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller - Root View Controller-->
-        <scene sceneID="Alp-St-AQM">
+        <!--Delivery Summary View Controller-->
+        <scene sceneID="AaK-FL-jiu">
             <objects>
-                <tableViewController id="NNA-2b-FfO" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gg2-3X-a0T">
+                <viewController id="wPq-rB-Ut5" customClass="FDDeliverySummaryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MRS-3I-HRf"/>
+                        <viewControllerLayoutGuide type="bottom" id="fOR-Jf-Cru"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Rwt-sy-XUf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="J78-Mz-hSd">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J78-Mz-hSd" id="TEM-T6-R6w">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="gnx-bd-qW2"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="G9m-hI-t3d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Syh-Zs-Q7Z">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="wPq-rB-Ut5" id="zz9-us-OPc"/>
+                                    <outlet property="delegate" destination="wPq-rB-Ut5" id="ufo-8E-sv6"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="YTr-KU-Rsb"/>
+                    <connections>
+                        <outlet property="tableView" destination="Syh-Zs-Q7Z" id="fzO-a4-8Y9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zoB-6y-2cg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="163" y="100"/>
+            <point key="canvasLocation" x="723" y="-148"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Tac-YA-f3b">
+        <!--Tab Bar Controller-->
+        <scene sceneID="07x-CV-y1f">
             <objects>
-                <navigationController definesPresentationContext="YES" id="P5n-vA-jHC" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tje-RO-DKf">
+                <tabBarController definesPresentationContext="YES" id="Bil-au-M2R" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="d3Q-Ju-YbB">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Jd6-02-GVl" kind="relationship" relationship="viewControllers" id="igZ-BD-AZJ"/>
+                        <segue destination="Y3y-7X-njg" kind="relationship" relationship="viewControllers" id="Aka-oZ-AaZ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c4w-Y6-WDo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-337" y="179"/>
+        </scene>
+        <!--View Controller - Profile-->
+        <scene sceneID="Fpo-Ex-Lqz">
+            <objects>
+                <viewController id="Y3y-7X-njg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OPA-ho-CWy"/>
+                        <viewControllerLayoutGuide type="bottom" id="3oZ-FF-5U8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Wpq-iY-njh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="1ES-gP-1n2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7dZ-8r-pTk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="197" y="505"/>
+        </scene>
+        <!--Navigation Controller - Delivery-->
+        <scene sceneID="Gri-jm-XB6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Jd6-02-GVl" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Delivery" id="4ZR-Qg-Kek"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kOm-uk-i1c">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="NNA-2b-FfO" kind="relationship" relationship="rootViewController" id="qMb-gS-WuL"/>
+                        <segue destination="wPq-rB-Ut5" kind="relationship" relationship="rootViewController" id="ebf-So-atc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="diD-ge-hOB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sR9-Np-cCH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-371" y="100"/>
+            <point key="canvasLocation" x="197" y="-148"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
