--- a/FruitexDriver/Interface/iPhoneStoryboard.storyboard
+++ b/FruitexDriver/Interface/iPhoneStoryboard.storyboard
@@ -144,7 +144,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="uyL-QF-lHN">
-                        <barButtonItem key="rightBarButtonItem" title="Next Step" id="sK4-0n-TqU"/>
+                        <barButtonItem key="rightBarButtonItem" title="Next Step" id="sK4-0n-TqU">
+                            <connections>
+                                <segue destination="XAe-8z-pik" kind="push" id="8yv-ND-5d6"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="nextStepButton" destination="sK4-0n-TqU" id="JpR-kz-9P9"/>
@@ -153,6 +157,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wMi-D0-3Da" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1705" y="-148"/>
+        </scene>
+        <!--Delivery Direction View Controller-->
+        <scene sceneID="Om9-HP-0C5">
+            <objects>
+                <tableViewController id="XAe-8z-pik" customClass="FDDeliveryDirectionViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6ri-e6-bk3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="dI3-J0-enn">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dI3-J0-enn" id="pXV-yp-oH4">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XAe-8z-pik" id="eqK-Ct-Rb5"/>
+                            <outlet property="delegate" destination="XAe-8z-pik" id="3Ae-Tn-wr4"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="bXu-19-sQl"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mao-Ky-Ay2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2183" y="-148"/>
         </scene>
         <!--Delivery Procurement View Controller-->
         <scene sceneID="xqF-XN-vMr">
